<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.pump</groupId>
    <artifactId>pumpernickel</artifactId>
    <name>Pumpernickel</name>
    <version>1.03-dev</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
        <junit.version>4.12</junit.version>
    </properties>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/mickleness/pumpernickel/issues</url>
    </issueManagement>
    <scm>
        <url>https://github.com/mickleness/pumpernickel</url>
        <connection>scm:git:https://github.com/mickleness/pumpernickel</connection>
        <developerConnection>git@github.com:mickleness/pumpernickel.git</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>mickleness</id>
            <name>Jeremy Wood</name>
            <url>https://mickleness.github.io/pumpernickel/</url>
            <email>mickleness@gmail.com</email>
        </developer>
    </developers>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <!--<version>2.22.1</version>-->
                    <version>3.0.0-M4</version>
                    <configuration>
                        <parallel>all</parallel>
                        <parallelMavenExecution>true</parallelMavenExecution>
                        <perCoreThreadCount>2</perCoreThreadCount>
                        <threadCount>4</threadCount>
                        <forkCount>2</forkCount>
                        <reuseForks>true</reuseForks>
                        <trimStackTrace>false</trimStackTrace>
                        <argline>--illegal-access=permit</argline>
                        <systemPropertyVariables>
                            <java.awt.headless>true</java.awt.headless>
                            <unit.test>true</unit.test>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>                
            </plugins>
        </pluginManagement>
    </build>
</project>
